@@ -123,9 +123,9 @@ class Tools extends Isabelle_Scala_Tools(
   Build.isabelle_tool1,
   Build.isabelle_tool2,
   Build.isabelle_tool3,
-  Build_Docker.isabelle_tool,
   CI_Build.isabelle_tool,
   Doc.isabelle_tool,
+  Docker_Build.isabelle_tool,
   Document_Build.isabelle_tool,
   Dotnet_Setup.isabelle_tool,
   Dump.isabelle_tool,
